# audio_Localization_dataset

./: .gitignore  GIT_HELP  HTML.TEXT  README.md  REPORT  Respeaker_YAMNET 1.py  SETUP_PI.md  analyze_audio.ipynb  confrence  model_E1.pt  plot.py  pyproject.toml  realtime_cnn16.py  realtime_gru.py  report.txt
.claude/: settings.local.json
1_data_collection/: Raspberry_recor_Respeaker.py  record_2mic_old.py  record_4mic_ReSpeaker.py
1_data_to_features/: features_to_csv.py
2_data_to_features/: 6_plot.py  features_to_csv.py  framing.py
2_training/: train_ALL_features.py  train_GCC_Strength.py  train_GCC_TDOA.py  train_IPD.py
3_inference/: __init__.py  _features.py
3_training/: sequence_audio_train.py  train_ALL_features.py
4_training/: sequence_audio_train.py  train_ALL_features.py  train_GCC_TDOA.py  train_LogMel.py  train_MFCC.py  train_RMS.py
6_user_interface/: capacitor.config.json  package.json  soundsense_server.py  soundsense_v5.html
6_user_interface UI/: soundsense_server.py  soundsense_v5.html  stt_tool.py
Respaeker/: Standard_mode.py
Results/: summary_ALL.txt  summary_GCC_STRENGTH.txt  summary_GCC_TDOA.txt  summary_IPD.txt  summary_LOGMEL.txt
feature_extraction/: 6_plot.py  audionTOfeatures.py  data_processing.py  newWAVtoCVS.py
inference/: realtime_inference.py  test.py
notebooks/: analyze_audio.ipynb  analyze_features.ipynb
training/: CNNonGCCStrength.py  CNNonGCCtdoa.py  CNNonIPD.py  CNNonLOGMEL  CNNonLOGMEL.py  CNNonRMS.py  cnn.py  model_E1.pt  train.py
z_archive/: evaluate_models.py  generate_all_plots.py  plot_generalization.py  (+5 more)
(+38 files in other folders)
